fix : exclude-ids헤더가 빈값일때 빈리스트가 아닌 공백요소가 하나  있는 리스트를 사용